crates/fsh-lint-rules/tests/snapshots/gritql_full_integration_test__full_pipeline_parse_compile.snap
---
source: crates/fsh-lint-rules/tests/gritql_full_integration_test.rs
expression: "format!(\"{:?}\", parsed)"
---
"Where(NodeKind(\"profile\"), FieldExists(\"description\"))"
