crates/fsh-lint-rules/tests/snapshots/gritql_full_integration_test__parser_assignment.snap
---
source: crates/fsh-lint-rules/tests/gritql_full_integration_test.rs
expression: result.unwrap()
---
Assignment:
  var: name
  value:
    NodeKind: profile
