crates/fsh-lint-rules/tests/snapshots/gritql_full_integration_test__parser_variable.snap
---
source: crates/fsh-lint-rules/tests/gritql_full_integration_test.rs
expression: result.unwrap()
---
Variable: name
