crates/fsh-lint-rules/tests/snapshots/gritql_full_integration_test__parser_where_clause.snap
---
source: crates/fsh-lint-rules/tests/gritql_full_integration_test.rs
expression: result.unwrap()
---
Where:
  - NodeKind: profile
  - FieldExists: description
